2009-07-01  Aapo Kojo <aapo.kojo@nokia.com>

	Release 2.2.60

2009-07-01  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* debian/rules:
	  Disabled --enable-launcher until we sort out what to do with hail.
	* src/Makefile.am:
	  Reverted $(UNWANTED) filtering.
	  Clearly nobody understands what's libtool doing.

2009-07-01  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home.c: Fix minor bug that meant home panning wasn't
	  as responsive as it should have been.

2009-07-01  Aapo Kojo <aapo.kojo@nokia.com>

	Add maemo-launcher build dependency
	* debian/control:

2009-06-30  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Add maemo-launcher support and exports map. Initial patch by Dafydd Harries.
	Fixes: NB#101031

	* configure.ac:
	* debian/hildon-desktop.launcher:
	* debian/rules:
	* src/Makefile.am:
	* src/export.map:

2009-06-30  Gordon Williams <gordon.williams@collabora.co.uk>

	Speed improvements for TidyFingerScroll
	* src/tidy/tidy-finger-scroll.c: use clutter_set_motion_events_enabled
	  to stop clutter redrawing the screen for picking after every motion
	  event. This really improves launcher subview scrolling performance.

2009-06-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#125534 No 'X' button to close the application

	* src/mb/hd-app.c (hd_app_request_geometry):
	  Do not discard the geometry request if the client is just
	  being mapped as then its frame window creation may silently
	  fail, causing all sort of funny effects.

2009-06-30  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/data/transitions.ini: Made task launcher initial transitions
	  1/3rd slower.

	Fixes: NB#106433 - Detect XVideo Overlays and don't blur if so

	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h: added _OMAP_VIDEO_OVERLAY atom
	* src/util/hd-util.c
	* src/util/hd-util.h: added hd_util_client_has_video_overlay	
	* src/tidy/tidy-blur-group.c
	* src/tidy/tidy-blur-group.h: added tidy_blur_group_set_chequer to