@@ -30,7 +30,7 @@ radius = 12
 radius_more = 16
 saturation = 0.8
 brightness = 0.4
-zoom = 0.9
+zoom = 0.95
 
 # The glow effect around launcher buttons
 [launcher_glow]
