@@ -1,3 +1,10 @@
+2009-07-01  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	More tweaks for MartinG
+	* data/transitions.ini: Zoom the background less
+	* src/launcher/hd-launcher-grid.c: Zoom out icons on the subview the
+	  same amount as for the main view.	
+
 2009-07-01  Aapo Kojo <aapo.kojo@nokia.com>
 
 	Release 2.2.60
